fix spacing

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .main-container {
   display: grid;
   grid-template-columns: 1fr 600px 300px 1fr;
-  grid-template-rows: 185px 750px 1fr 300px 60px;
+  grid-template-rows: 185px 750px 1fr 50px 60px;
   font-family: 'Fira Code', monospace;
   min-height: 100%;
   background-color: #eee;
